# wheymen

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.db  Dockerfile.server  deploy_steps.txt  docker-compose.yml  docker_notes.txt  docker_readme.txt  notes.txt
.devcontainer/: devcontainer.json
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.svelte  app.css
client/src/lib/api/: auth.ts  request-target.ts  routine.ts  session.ts  shared.ts  urls.ts  workout.ts
client/src/lib/components/: routine-card.svelte
client/src/lib/models/: category.ts  db-response.ts  in-progress.ts  routine.ts  session.ts  status-item.ts  user.ts  workout.ts
client/src/lib/pages/: account-page.svelte  account-recovery-page.svelte  continue-routine-page.svelte  continue-session-page.svelte  create-routine-page.svelte  create-workout-page.svelte  edit-routine-page.svelte  edit-routine.svelte  edit-workout-page.svelte  edit-workout.svelte  gains-page.svelte  landing-page.svelte  login-page.svelte  logout-page.svelte  make-gains-page.svelte  profile-page.svelte  sign-up-page.svelte  start-routine-page.svelte  start-session-page.svelte
server/: Cargo.toml
server/src/: main.rs
server/src/actions/: helper.rs  mod.rs  relate.rs  routine.rs  routine_history.rs  session.rs  workout.rs  workout_history.rs
server/src/api/: mod.rs  routine.rs  session.rs  workout.rs
server/src/model/: data.rs  db.rs  env_var.rs  error.rs  mod.rs  routine.rs  session.rs  shared_types.rs  workout.rs
server/src/resource/: auth.rs  client.rs
(+42 files in other folders)
