[package]
name = "wheymen_surreal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-files = "0.6.2"
serde = { version = "1.0.144", features = ['derive'] }
serde_json = "1.0.85"
postgrest = "1.3.1"
dotenv = "0.15.0"
jsonwebtoken = "8.1.1"
reqwest = "0.11.11"
futures-util = "0.3.24"
chrono = "0.4.22"